<resources>
    <string name="app_name">ViewPager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="signup">SignUp</string>
    <string name="login">LogIn</string>
    <string name="title_here">title here</string>
    <string name="description_here">description here</string>
    <string name="image">image</string>
    <string name="published_at_here">published at here</string>
    <string name="contact_us">Contact Us</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="use_other_methods">Use other Methods</string>
    <string name="new_user_register_here">New user? Register Here</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="register">Register</string>
    <string name="here_s_your_first_step_with_us">Here\'s your first step with us!</string>
</resources>