<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#11cfc5"
    tools:context=".RegisterActivity">

  <ImageView
      android:id="@+id/register_Sign_Up_hero"
      android:layout_width="180dp"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_login_hero"
      android:layout_alignParentEnd="true"
      android:layout_marginEnd="15dp"
      android:layout_marginTop="30dp"
      android:contentDescription="@string/image" />

  <TextView
      android:id="@+id/First_Step"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:textStyle="bold"
      android:layout_marginTop="65dp"
      android:layout_marginStart="20dp"
      android:layout_toStartOf="@+id/register_Sign_Up_hero"
      android:text="@string/here_s_your_first_step_with_us"
      android:textColor="@color/white"
      android:textSize="30sp" />

  <LinearLayout
      android:id="@+id/linear_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/register_Sign_Up_hero"
      android:layout_marginTop="7dp"
      android:orientation="vertical"
      android:background="@drawable/custom_linear_layout"
      android:layout_marginRight="15dp"
      android:layout_marginLeft="15dp"
      android:paddingVertical="25dp"
      android:paddingHorizontal="20dp"
      android:layout_centerHorizontal="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="#11cfc5"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="textPersonName"
        android:autofillHints="Email"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/email"
        android:textColor="#11cfc5"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="textEmailAddress"
        android:autofillHints="EmailEdit"
        tools:ignore="LabelFor" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile"
        android:layout_marginTop="10dp"
        android:textColor="#11cfc5"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/mobile_edit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="numberDecimal"
        android:autofillHints="Email"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/password"
        android:textColor="#11cfc5"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/password_edit"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:inputType="textPassword"
        android:autofillHints="Password"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/Register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="100dp"
        android:background="@drawable/button_background_blue"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:text="@string/register"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="20sp"/>

  </LinearLayout>

  <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_below="@+id/linear_layout"
      android:layout_marginTop="15dp"
      android:layout_centerHorizontal="true">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_facebook"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/image" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_google_plus"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/image" />

  </LinearLayout>

</RelativeLayout>