<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/right_side"
        android:layout_width="wrap_content"
        android:layout_height="600dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="-1dp"
        android:src="@drawable/ic_side_bg"
        android:contentDescription="@string/image" />

    <ImageView
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/right_side"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="-90dp"
        android:src="@drawable/ic_add_img"
        android:contentDescription="@string/image" />

    <ImageView
        android:id="@+id/register_hero"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/right_side"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:src="@drawable/ic_register_hero"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/Account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="65dp"
        android:layout_toStartOf="@+id/register_hero"
        android:text="@string/already_have_an_account"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Account"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/email"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/email_edit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignTop="@id/email"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:inputType="textEmailAddress"
        android:autofillHints="TExtEmail"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_edit"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/password_edit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignTop="@id/password"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"
        android:autofillHints="Enter Password"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_edit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_background_blue"
        android:gravity="center"
        android:paddingHorizontal="100dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/new_user_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/new_user_register_here"
        android:textColor="@color/purple_200" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignTop="@+id/use_other_methods"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="20dp"
        android:layout_toStartOf="@+id/use_other_methods"
        android:background="#D8D6D6" />

    <TextView
        android:id="@+id/use_other_methods"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_user_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/use_other_methods"
        android:textColor="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignTop="@+id/use_other_methods"
        android:layout_marginVertical="10dp"
        android:layout_marginEnd="30dp"
        android:layout_toEndOf="@+id/use_other_methods"
        android:background="#D8D6D6" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/use_other_methods"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <com.google.android.gms.common.SignInButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/google_button"
            android:contentDescription="@string/image" />

    </LinearLayout>

</RelativeLayout>